--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 		<script type="text/javascript" src="bower_components\knockout\dist\knockout.js"></script>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=startApp"></script>
 		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/map.js"></script>
 	</body>
 </html>
