add data binding for seaarch button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="map-canvas"></div>
 		<div class="location-search">
-			<form id="searchbox">
+			<form id="searchbox" data-bind="submit: searchLocation">
 				<input id="search" type="text" data-bind="textInput: userInput, event: {keyup: filterMarkers}" placeholder="Search location">
 				<input id="submit" type="submit" value="Search">
 			</form>			
