--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div id="map-canvas"></div>
 		<div class="location-search">
 			<form id="searchbox" data-bind="submit: searchLocation">
-				<input id="search" type="text" data-bind="textInput: userInput, event: {keyup: filterMarkers}, value: searchText" placeholder="Search location">
+				<input id="search" type="text" data-bind="textInput: userInput, event: {keyup: filterMarkers}, value: searchText" placeholder="I'm looking for..">
 				<input id="submit" type="submit" value="Search">
 			</form>			
 		</div>
