--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport"  charset="UTF-8" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/style.css">
 		<title>Jo's Neighborhood</title>
 	</head>
 	<body>
 		<div id="map-canvas"></div>
 		<div class="location-search">
-			<form id="searchbox" data-bind="submit: searchLocation">
-				<input id="search" type="text" data-bind="textInput: userInput, event: {keyup: filterMarkers}, value: searchText" placeholder="Look for.. any location..">
-				<input id="submit" type="submit" value="Search">
+			<form class="searchbox" data-bind="submit: searchLocation">
+				<input class="search" type="text" data-bind="textInput: userInput, event: {keyup: filterMarkers}, value: searchText" placeholder="Look for.. any location..">
+				<input class="submit" type="submit" value="Search">
 			</form>			
 		</div>
 		<div class="location-list">
-			<div id="locations" data-bind="foreach: visibleLocations">
+			<!-- <button class="nav-btn">List</button> -->
+			<div class="locations" data-bind="foreach: visibleLocations">
 				<p class="loc" data-bind="text: locationName, click: $parent.showLocation"></p>
 				<hr>
 			</div>
 		</div>
-
-		<script type="text/javascript" src="bower_components\jquery\dist\jquery.min.js"></script>
-		<script type="text/javascript" src="bower_components\knockout\dist\knockout.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
-		<script type="text/javascript" src="js/map.js"></script>
+		<script src="bower_components\jquery\dist\jquery.min.js"></script>
+		<script src="bower_components\knockout\dist\knockout.js"></script>
+		<script src="js/app.js"></script>
+		<script src="js/map.js"></script>
+		<script>
+			// $(".nav-btn").click(function() {
+			// 	if($(".location-list").css('right') < 0) {
+			// 		console.log("show");
+			// 		$(".location-list").animate({'right':'0px'}, 1000);
+			// 	}
+			// 	else {
+			// 		console.log("hide");
+			// 		$(".location-list").animate({'right':'-350px'}, 1000);
+			// 	}
+			// });
+		</script>
 		<script async src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=startApp" onerror="googleError()"></script>
 	</body>
 </html>
