--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</form>			
 		</div>
 		<div class="location-list">
-			<!-- <button class="nav-btn">List</button> -->
+			<button class="nav-btn">Toggle List</button>
 			<div class="locations" data-bind="foreach: visibleLocations">
 				<p class="loc" data-bind="text: locationName, click: $parent.showLocation"></p>
 				<hr>
@@ -26,16 +26,24 @@
 		<script src="js/app.js"></script>
 		<script src="js/map.js"></script>
 		<script>
-			// $(".nav-btn").click(function() {
-			// 	if($(".location-list").css('right') < 0) {
-			// 		console.log("show");
-			// 		$(".location-list").animate({'right':'0px'}, 1000);
-			// 	}
-			// 	else {
-			// 		console.log("hide");
-			// 		$(".location-list").animate({'right':'-350px'}, 1000);
-			// 	}
-			// });
+			$(".nav-btn").click(function() {
+				$(".location-list").ToggleList();
+			});
+			$.fn.ToggleList = function(){
+				return this.each(function() {
+					if(parseInt($(this).css('right')) < 0) {
+						$(this).animate({'right':'0px'}, 1000);
+					}
+					else {
+						if(screen.width <= 450){
+							$(this).animate({'right':'-250px'}, 1000);
+						}
+						else {
+							$(this).animate({'right':'-350px'}, 1000);
+						}
+					}
+				});
+			};
 		</script>
 		<script async src="https://maps.googleapis.com/maps/api/js?libraries=places&callback=startApp" onerror="googleError()"></script>
 	</body>
